[gd_scene load_steps=8 format=2]

[ext_resource path="res://GUI/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 75
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 2 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 1 )

[node name="PlayerMessage" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -425.5
margin_top = -190.481
margin_right = 425.5
margin_bottom = 188.519
custom_fonts/font = SubResource( 1 )
text = "Wave 1"
align = 1
valign = 1

[node name="PlayerHealth" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -0.981293
margin_top = -77.0
margin_right = 875.019
margin_bottom = -1.0
custom_fonts/font = SubResource( 2 )
text = "HEALTH    0"
valign = 1

[node name="PlayerSkrilla" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -843.0
margin_top = -71.0
custom_fonts/font = SubResource( 3 )
text = "SKRILLA    0"
align = 2
valign = 1

[node name="ARSHealth" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -541.0
margin_right = 541.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 4 )
text = "ARS Health    0"
align = 1
valign = 1

[node name="PlayerScore" type="Label" parent="."]
margin_right = 683.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 5 )
text = "SCORE    0"
valign = 1

